# antler

./: .gitmodules  CMakeLists.txt
doc/: .#README.org  README.org
samples/: CMakeLists.txt
samples/add-vectors/: CMakeLists.txt  add.comp  main.c
samples/conway-game-of-life/: CMakeLists.txt  main.c  quad.frag.glsl  quad.vert  quad.vert.glsl
samples/fragment-shader-client/: CMakeLists.txt  main.c
samples/fragment-shader-client/shaders/: magic-perlin-frame.glsl  prewitt.glsl  scharr.glsl  sobel.glsl
samples/gooch-shading/: CMakeLists.txt  edge.frag.glsl  edge.vert.glsl  gooch.frag.glsl  gooch.vert.glsl  main.c
samples/hello-quad/: CMakeLists.txt  main.c  quad.frag.glsl  quad.vert
samples/hello-triangle/: CMakeLists.txt  main.c  triangle.vert  triangle.vert.glsl
samples/rotating-cube/: CMakeLists.txt  cube.vert  diffuse.frag.glsl  diffuse.vert.glsl  main.c
samples/shell-texturing/: CMakeLists.txt  grass.frag.glsl  main.cpp  shell.geom.glsl  shell.vert.glsl
samples/transform-cube/: CMakeLists.txt  diffuse.vert.glsl  main.cpp
src/: antler-imgui.cpp  antler-imgui.hpp  antler.h  base.c  base.h  buffer.c  camera.c  camera.h  commands.c  cpp-compat.hpp  descriptor.c  device.c  image.c  instance.c  logger.c  offscreen-canvas.c  offscreen-canvas.h  pipeline.c  render-pass.c  swapchain.c  transforms.c  transforms.h  util.c
